Fix bug on mobile view

--- a/css/home_style.css
+++ b/css/home_style.css
@@ -538,7 +538,7 @@ html {
     width: 100%;
     /* height: 100%; */
     position: fixed;
-    top: 25vh;
+    top: 50vh;
     transform: translateY(-50%);
     z-index: 1;
     /* position: relative; */
